--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<img src="img/banner-logo.png" alt="" class="banner__logo">
 					<div class="banner__title"><div class="banner__title-body"><p>Clear, smart, attractive design</p>for your app, logo, website</div></div>
 					<a href="" class="banner__button button">Read More</a>
-					<img src="img/arrow-down.png" class="banner__arrow">
+					<img src="img/arrow-down.png" alt="" class="banner__arrow">
 				</div>
 			</div>
 		</div>
@@ -109,17 +109,17 @@ on setting the right intention.</div>
 							<form action="#" class="feedback-form">
 								<div class="feedback-form__user-data">
 									<div class="feedback-form__user-name">
-										<label for="name">YOUR NAME</label>
-										<input type="text" name="name">
+										<label for="form-name">YOUR NAME</label>
+										<input type="text" id="form-name" name="name">
 									</div>
 									<div class="feedback-form__email">
-										<label for="email">YOUR E-MAIL</label>
-										<input type="emeil" name="email">
+										<label for="form-email">YOUR E-MAIL</label>
+										<input type="email" id="form-email" name="email">
 									</div>
 								</div>
 								<div class="feedback-form__massage">
-									<label for="massage">MESSAGE</label>
-									<textarea name="massage" cols="30" rows="10"></textarea>
+									<label for="form-massage">MESSAGE</label>
+									<textarea name="massage" id="form-massage" cols="30" rows="10"></textarea>
 								</div>
 								<input type="submit" name="submit" value="send">
 							</form>
